cluster-server-01/apps/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-radarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  rules:
  - host: media.server.schwarz47.at
    http:
      paths:
      - path: /radarr
        pathType: Prefix
        backend:
          service:
            name: radarr-service
            port:
              name: web
  tls:
  - hosts:
    - media.server.schwarz47.at
    secretName: server-schwarz47-at-tls
